// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label snapshots Label: 0 1`] = `
<label
  className={null}
  data-sketch-symbol="Label"
>
  Label
</label>
`;

exports[`label snapshots Label: 1 1`] = `
<legend
  className={null}
>
  Legend label
</legend>
`;

exports[`label snapshots Label: 2 1`] = `
<label
  className={null}
>
  Hidden label
</label>
`;
